# py-circuit-breaker

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_circuit_breaker/: __init__.py
tests/: test_circuit_breaker.py
