[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-circuit-breaker"
version = "0.2.0"
description = "Circuit breaker pattern for fault-tolerant service calls."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["circuit-breaker", "fault-tolerance", "resilience", "retry", "microservice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-circuit-breaker#readme"
Repository = "https://github.com/philiprehberger/py-circuit-breaker"
Issues = "https://github.com/philiprehberger/py-circuit-breaker/issues"
Changelog = "https://github.com/philiprehberger/py-circuit-breaker/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_circuit_breaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
